# server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  appveyor.yml
src/: main.rs  test.rs  ws_server.rs
src/actions/: create_team.rs  mod.rs  move_submarine.rs  ping.rs  start_game.rs
src/api/: cors.rs  error_handlers.rs  mod.rs  route.rs  server.rs
src/api/model/: mod.rs
src/api/routes/: mod.rs  team.rs
src/events/: game_started.rs  mod.rs  submarine_created.rs  submarine_move_cooldown.rs  submarine_moved.rs  submarine_updated.rs  team_created.rs  tile_updated.rs
src/game/: auth.rs  data.rs  mod.rs  server_time.rs  state.rs  submarine.rs  team.rs  world.rs
src/game/actions/: create_team.rs  mod.rs
src/game/events/: mod.rs
src/game/hex_grid/: coordinate.rs  mod.rs  offset.rs
src/websocket/: message.rs  mod.rs  request.rs  server.rs
