[package]
name = "athena"
version = "0.1.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]

[dependencies]
validate = "0.6"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
rocket_cors = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.4"
ws = "0.7.3"
hex_grid = "0.1"

[patch.crates-io]

# https://github.com/SergioBenitez/Rocket/issues/513
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }

# https://github.com/housleyjk/ws-rs/issues/177
mio = {git = "https://github.com/carllerche/mio", rev = "ad9911fda25798f07b5d8663f9f0640081415aa9"}
